--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <img src="Mahe.JPEG">
+        <img src="Mahe.jpeg">
         <h1>Your Name</h1>
         <p>10th | 12th | Bsc.DS and AI</p>
     </header>
@@ -37,4 +37,5 @@
 </body>
 </html>
         
+
     
