--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <img src="Mahe.jpeg">
-        <h1>Your Name</h1>
+        <h1>Maheswari C</h1>
         <p>10th | 12th | Bsc.DS and AI</p>
     </header>
     <section id="bio">
@@ -39,3 +39,4 @@
         
 
     
+
